# cregit

./: .gitignore  CONTRIBUTING.md  README.md  devenv.nix  flake.nix  perl-html-fromtext.nix  run_pipeline_process.sh  sbt.nix  srcml.nix
bfg/: README.md
blameRepo/: blameRepoFiles.pl  formatBlame.pl
blobExec/: README.md  build.sbt
blobExec/src/main/scala/cregit/blobexec/: BlobExecModifier.scala  Main.scala
logos/: README.md
persons/: build.sbt
prettyPrint/: prettyPrint-author.pl  prettyPrintFiles.pl
slickGitLog/: README.md  build.sbt
tokenize/: tokenize.pl  tokenizeSrcMl.pl
tokenize/m4Tokenizer/: README.md
tokenize/rustTokenizer/: Cargo.toml  Makefile  README.md  readme.md  readme.org
tokenize/rustTokenizer/src/: main.rs
tokenize/rustTokenizer/tests/: smoke.rs
tokenize/rustTokenizer/tests/fixtures/: edge_cases.rs  hello.rs
tokenize/srcMLtoken/: README.md
tokenize/text/: simpleTokenizer.pl
tokenizeByBlobId/: tokenBySha.pl
